@@ -20,6 +20,7 @@ Additions:
    * Elm_Win_Trap and elm_win_trap_set() to allow e17 integration.
    * elm_flip_go_to()
    * Add smart callback "focus-in" and "focus-out" when an Elementary object gain or loose focus.
+   * On focus loss, Elm_Spinner properly hide Elm_Entry and display label properly.
 
 Fixes:
 
