@@ -370,3 +370,4 @@
 2012-08-03  Cedric Bail
 
 	* Add smart callback "focus-in" and "focus-out".
+	* On focus loss, Elm_Spinner hide entry and display label properly.
